# conclave-daemon

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  conclave_daemon  daemon.c  daemon.h  main.c  version.h
src/service/: conclave.service
